GEOU-1601: Added missing headers and code for AD controls
